fixed overflow

--- a/aubrey/sibling-magic/style.css
+++ b/aubrey/sibling-magic/style.css
@@ -1,7 +1,7 @@
 body {
 
     max-width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
     width: 100%;
 }
 
